@@ -118,6 +118,14 @@ enum {
     SP_VERB_DIALOG_XML_EDITOR,
     SP_VERB_DIALOG_TOGGLE,
     SP_VERB_DIALOG_ITEM,
+    /* Help */
+    SP_VERB_HELP_KEYS,
+    SP_VERB_HELP_ABOUT,
+    /* Tutorials */
+    SP_VERB_TUTORIAL_BASIC,
+    SP_VERB_TUTORIAL_ADVANCED,
+    SP_VERB_TUTORIAL_DESIGN,
+    SP_VERB_TUTORIAL_TIPS,
     /* Footer */
     SP_VERB_LAST
 };
